--- a/app/components/landing/landingView.html
+++ b/app/components/landing/landingView.html
@@ -1,45 +1,52 @@
-
 <div class="section">
-  <div class="right-align">
-      <a class="btn-floating btn-large waves-effect waves-light red valign"><i class="mdi-content-add"></i></a>
+  <div style="padding-left: 10px;" class="row left">
+    <button ng-click="go('screening.create')" class="btn-floating btn-large waves-effect waves-light red" ><i class="mdi-content-add"></i></button>
   </div>
 </div>
 
+<!-- <nav> -->
+<!--   <div class="nav-wrapper"> -->
+<!--     <form class="col s11"> -->
+<!--       <div class="input-field"> -->
+<!--         <input id="search" type="search" required> -->
+<!--         <label for="search"><i class="mdi-action-search"></i></label> -->
+<!--         <i class="mdi-navigation-close"></i> -->
+<!--       </div> -->
+<!--     </form> -->
+<!--   </div> -->
+<!-- </nav> --> 
 
-<nav>
-  <div class="nav-wrapper">
-    <form class="col s11">
-      <div class="input-field">
-        <input id="search" type="search" required>
-        <label for="search"><i class="mdi-action-search"></i></label>
-        <i class="mdi-navigation-close"></i>
-      </div>
-    </form>
-  </div>
-</nav> 
-
-<div class="container">
-  <div class="row">
-    <div class="col s6">
+<div class="section">
+  <div class="row" style="padding-top: 50px;">
+    <div ng-repeat="screening in screenings" class="col s6">
       <div class="card small">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
+          <img class="activator" src="{{screening._serverData.screeningPoster._url}}"/>
         </div>
         <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Card Title <i class="mdi-navigation-more-vert right"></i></span>
+          <span class="card-title activator grey-text text-darken-4">{{screening._serverData.screeningTitle}}<i class="mdi-navigation-more-vert right"></i></span>
+          
           <p><a href="#">This is a link</a></p>
+          <span class="right">
+            <a class="waves-effect waves-light btn red" ui-sref="screening.update({ screeningId:screening.id })">Edit<i class="mdi-editor-mode-edit right"></i></a>
+          </span>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
-          <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          <ul class="collection">
+          <span class="card-title grey-text text-darken-4">{{screening._serverData.screeningTitle}}<span> ({{screening._serverData.screeningReleaseDate | date: 'yyyy'}})<i</span><i class="mdi-navigation-close right"></i></span>
+          <p>{{screening._serverData.screeningSynopsis}}<i</p>
+          <ul class="collection left">
             <li class="collection-item avatar">
-              <img src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png" alt="" class="circle">
-              <span class="title">Title</span>
+             <span class="title">Director(s): {{screening._serverData.screeningDirectorInfo}}<i</span>
+             <br/>
+             <span class="title">Star(s): {{screening._serverData.screeningStarInfo}}<i</span>
             </li>
           </ul>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+
+
 
