--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -29,8 +29,14 @@ $icon-font-path: "../../../bower_components/bootstrap-sass-official/assets/fonts
 body {
   padding: 0;
   margin: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
+main {
+  flex: 1 0 auto;
+}
 /**
 * Navigation
 */
