update with edit button fix to check for currentUser

--- a/app/components/landing/landingView.html
+++ b/app/components/landing/landingView.html
@@ -1,6 +1,6 @@
 <div class="section">
   <div style="padding-left: 10px;" class="row left">
-    <button ng-click="go('screening.create')" class="btn-floating btn-large waves-effect waves-light red" ><i class="mdi-content-add"></i></button>
+    <button ui-sref="screening.create" class="btn-floating btn-large waves-effect waves-light red" ><i class="mdi-content-add"></i></button>
   </div>
 </div>
 
@@ -27,7 +27,7 @@
           <span class="card-title activator grey-text text-darken-4">{{screening._serverData.screeningTitle}}<i class="mdi-navigation-more-vert right"></i></span>
           
           <p><a href="#">This is a link</a></p>
-          <span class="right">
+          <span class="right" ng-show="currentUser">
             <a class="waves-effect waves-light btn red" ui-sref="screening.update({ screeningId:screening.id })">Edit<i class="mdi-editor-mode-edit right"></i></a>
           </span>
         </div>
