update with user screenings page

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -53,3 +53,11 @@ main {
   position: fixed;
 }
 
+/**
+* Material Design Overrides
+*/
+
+.screening-form .input-field label {
+  position: initial !important;
+}
+
