fix create/delete action

--- a/app/components/screening/update/updateScreeningView.html
+++ b/app/components/screening/update/updateScreeningView.html
@@ -1,7 +1,7 @@
 <div class="section">
   <h1> Update Screening </h1>
   <div class="row">
-    <form class="col s12 screening-form" ng-submit="createScreening()">
+    <form class="col s12 screening-form" ng-submit="updateScreening()">
       <div class="row">
         <div class="input-field col s12">
           <label for="title"> Screening Title </label>
