Add following fields to Screening table: screeningLink, screeningTerms, screeningMaxSitting

--- a/app/components/screening/create/createScreeningView.html
+++ b/app/components/screening/create/createScreeningView.html
@@ -73,6 +73,24 @@
         </div>
       </div>
       <div class="row">
+        <div class="input-field col s12">
+          <label for="link"> Source URL </label>
+          <input id="link" type="url" class="validate" ng-model="link">
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+           <label for="terms"> Screening Terms &amp; Conditions </label> 
+          <textarea id="terms" class="materialize-textarea" ng-model="terms"></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <label for="sitting"> Maximum Sitting </label>
+          <input id="sitting" type="number" class="validate" ng-model="sitting">
+        </div>
+      </div>
+      <div class="row">
         <div class="file-field input-field col s12">
           <input type="text" class="validate file-path" ng-model="photopath"/>
           <div class="btn">
